# compshop

./: .env.example  .gitignore  README.md  pyproject.toml
src/compshop/: __init__.py  classify.py  cli.py  config.py  ingest.py  prompt.py  validate.py  writer.py
template/: CompShopAgentTemplate.xlsx
