[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "compshop"
version = "0.1.0"
description = "Gaming competitor offer extraction pipeline — PDF to Excel"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "pypdf>=4.0",
    "openpyxl>=3.1",
    "rich>=13.0",
    "python-dotenv>=1.0",
    "pymupdf>=1.24",
    "pytesseract>=0.3",
    "Pillow>=10.0",
]

[project.scripts]
compshop = "compshop.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
